upd: discount api basic (isnot business logic)
