# internal/api/controller/event_discount/delete_one.controller.go
@@ -1,1 +1,40 @@
-package event_discount
+package event_discount_controller
+
+import (
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// DeleteOne godoc
+// @Summary Delete an event discount
+// @Description Deletes an event discount by ID for the current user
+// @Tags Event Discounts
+// @Accept json
+// @Produce json
+// @Param id query string true "Event Discount ID"
+// @Router /api/v1/event-discount/delete [delete]
+func (e *EventDiscountController) DeleteOne(ctx *gin.Context) {
+	currentUser, exist := ctx.Get("currentUser")
+	if !exist {
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"status":  "error",
+			"message": "You are not login!",
+		})
+		return
+	}
+
+	id := ctx.Query("id")
+	err := e.EventDiscountUseCase.DeleteOne(ctx, id, fmt.Sprintf("%s", currentUser))
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": err.Error(),
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"status": "success",
+	})
+}
