# internal/api/routes/event_discount/admin_event_discount.route.go
@@ -1,1 +1,0 @@
-package event_discount
